--- a/index.html
+++ b/index.html
@@ -12,6 +12,18 @@
     <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 <body id="app">
+<div id="language-btn">
+    <a class='btn-floating dropdown-button btn green' href='#' data-hover="false" data-activates='language'><i
+            class="large mdi-action-language"></i></a>
+</div>
+<!-- Dropdown Structure -->
+<ul id='language' class='dropdown-content'>
+    <li id="fr"><a v-on:click="setLanguage('fr')"><img src="img/icons/fr_flag.png" alt="french-flag"/></a></li>
+    <li id="en"><a v-on:click="setLanguage('en')"><img src="img/icons/uk_flag.png" alt="uk-flag"/></a></li>
+</ul>
+<div id="cv-btn">
+    <a class="btn-floating waves-effect waves-light green center" href="{{jsonData.cv}}" target="_blank"><strong>CV</strong></a>
+</div>
 <header class="intro light-green darken-4 z-depth-1">
     <h1 class="grey-text text-lighten-5">Guillaume Migeon</h1>
     <div class="row">
@@ -36,36 +48,55 @@
         </div>
         <hr/>
         <h5>{{jsonData.project_text}}</h5>
+        <br>
     </div>
 
-
     <div id="projects" class="row">
-        <div class="col s12 m6 l3">
-            <div class="card medium">
+        <div v-for="project in jsonData.project" class="col s12 m6 l3">
+            <div class="card large">
                 <div class="card-image">
-                    <img src="" alt="osef">
+                    <img v-bind:src="'img/' + project.img" alt="{{project.imgalt}}">
                 </div>
                 <div class="card-content">
-                    <div class="chips-container">
-                        <span class="chips">tag</span>
+                    <div class="tag-container">
+                        <span v-for="t in project.tags" class="tag light-green darken-3">{{t.tag}}</span>
                     </div>
-                    <h5>title</h5>
+                    <h5>{{project.title}}</h5>
 
-                    <p>description</p>
+                    <p>{{project.description}}</p>
                 </div>
                 <div class="card-action">
-                    <a href="" target="_blank">Sources</a>
-                    <a href="" target="_blank">try</a>
+                    <a v-if="project.sources" href="{{project.sources}}" target="_blank">Sources</a>
+                    <a v-if="project.link" href="{{project.link}}" target="_blank">{{jsonData.try}}</a>
                 </div>
             </div>
         </div>
     </div>
 </main>
 
-<footer class="page-footer orange">
+<footer class="page-footer green">
+    <div class="container">
+        <div class="row center valign-wrapper">
+            <div class="col s4">
+                <a href="mailto:guillaumeoutpox@gmail.com"><img class="responsive-img" src="img/mail.png"
+                                                                alt="Contact me via mail"/></a>
+            </div>
+            <div class="col s4">
+                <a href="https://github.com/Outpox" target="_blank"><img class="responsive-img"
+                                                                         src="img/github.png"
+                                                                         alt="Find me on Github"/></a>
+            </div>
+            <div class="col s4">
+                <a href="https://fr.linkedin.com/pub/guillaume-migeon/b8/b28/b8a" target="_blank"><img
+                        class="responsive-img"
+                        src="img/linkedin.png"
+                        alt="Find me on LinkedIn"/></a>
+            </div>
+        </div>
+    </div>
     <div class="footer-copyright">
         <div class="container">
-            Made with Materialize
+            {{jsonData.footer}}
         </div>
     </div>
 </footer>
@@ -74,7 +105,6 @@
 <!--  Scripts-->
 <script src="node_modules/jquery/dist/jquery.min.js"></script>
 <script src="node_modules/materialize-css/bin/materialize.js"></script>
-<script src="js/index.js"></script>
 <script src="node_modules/vue/dist/vue.js"></script>
 <script src="js/app.js"></script>
 </body>
