Updated meta tags

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+    <meta name="description" content="Guillaume Migeon's portfolio">
+    <meta name="keywords" content="portfolio, web development, open source, outpox">
+    <meta name="author" content="Guillaume 'Outpox' Migeon">
     <title>Guillaume Migeon - Portfolio</title>
+
+    <link rel="shortcut icon" type="image/x-icon" href="img/icons/keyboard.ico"/>
 
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
