Added hoverable class on project cards

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
     <div id="projects" class="row">
         <div v-for="project in jsonData.project" class="col s12 m6 l3">
-            <div class="card large">
+            <div class="card large hoverable">
                 <div class="card-image">
                     <img v-bind:src="'img/' + project.img" alt="{{project.imgalt}}">
                 </div>
