--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <main>
     <div class="container center">
         <h5>{{jsonData.about}}</h5>
-        <h6 class="flow-text">{{jsonData.intro}}</h6>
+        <h6 class="flow-text">{{jsonData.intro1}} {{age}} {{jsonData.intro2}}</h6>
         <hr/>
         <div class="row">
             <div class="col s12 m10 offset-m1">
