Updated cv link

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <li id="en"><a v-on:click="setLanguage('en')"><img src="img/icons/uk_flag.png" alt="uk-flag"/></a></li>
 </ul>
 <div id="cv-btn">
-    <a class="btn-floating waves-effect waves-light green center" href="img/{{jsonData.cv}}" target="_blank"><strong>CV</strong></a>
+    <a class="btn-floating waves-effect waves-light green center" href="cv/{{jsonData.cv}}" target="_blank"><strong>CV</strong></a>
 </div>
 <header class="intro light-green darken-4 z-depth-1">
     <h1 class="grey-text text-lighten-5">Guillaume Migeon</h1>
