--- a/index.html
+++ b/index.html
@@ -41,18 +41,28 @@
 
 <main>
     <div class="container center">
-        <h5>{{jsonData.about}}</h5>
-        <h6 class="flow-text">{{jsonData.intro1}} {{age}} {{jsonData.intro2}}</h6>
+        <div class="row">
+            <div class="col s12 m10 offset-m1">
+                <p class="title">{{jsonData.about}}</p>
+                <p class="flow-text">{{jsonData.intro1}} {{age}} {{jsonData.intro2}}</p>
+            </div>
+        </div>
         <hr/>
         <div class="row">
             <div class="col s12 m10 offset-m1">
-                <h5>{{jsonData.story}}</h5>
+                <p class="title">{{jsonData.story}}</p>
 
                 <p class="flow-text">{{{jsonData.story_text}}}</p>
             </div>
         </div>
         <hr/>
-        <h5>{{jsonData.project_text}}</h5>
+        <div class="row">
+            <div class="col s12 m10 offset-m1">
+                <p class="title">{{jsonData.projects}}</p>
+
+                <p class="flow-text">{{{jsonData.projects_description}}}</p>
+            </div>
+        </div>
         <br>
     </div>
 
