Fixed icon language

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 </head>
 <body id="app">
 <div id="language-btn">
-    <a class='btn-floating dropdown-button btn green' href='#' data-hover="false" data-activates='language'><i
-            class="large mdi-action-language"></i></a>
+    <a class='btn-floating dropdown-button btn green' href='#' data-hover="false" data-activates='language'><i class="material-icons">language</i></a>
 </div>
 <!-- Dropdown Structure -->
 <ul id='language' class='dropdown-content'>
