--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <h1 class="grey-text text-lighten-5">Guillaume Migeon</h1>
     <div class="row">
         <div class="col s6 offset-s3 m2 offset-m5">
-            <img src="img/photo.jpg" alt="Personnal picture" class="responsive-img circle"/>
+            <img src="img/photo_downscaled.jpg" alt="Personnal picture" class="responsive-img circle"/>
         </div>
     </div>
     <h5 class="grey lighten-4 grey-text text-darken-1">{{jsonData.title}}</h5>
